--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
               <tbody>
     <tr>
                       <td style="vertical-align:middle;">2010演算法期中考</td>
-                         <td style="vertical-align:middle;"><a href="goo.gl/pvEaZy" class="pdf-mid">2011期中考</a></td>
+                         <td style="vertical-align:middle;"><a href="goo.gl/nGwZ8q" class="pdf-mid">2010期中考</a></td>
                          <td style="vertical-align:middle;">2015/9/9</td>
                     </tr>
 		<tr>
