--- a/index.html
+++ b/index.html
@@ -234,23 +234,23 @@
               <tbody>
                 <tr>
                   <td style="vertical-align:middle;">Syllabus</td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Syllabus</a></td>
+                  <td style="vertical-align:middle;"><a href="" class="pdf-title">Syllabus</a></td>
                   <td style="vertical-align:middle;"><a href="#" class="pdf-title">Syllabus-4</a></td>
                   <td style="vertical-align:middle;"></td>
                   <td style="vertical-align:middle;">2015/09/08</td>
                 </tr>
                 <tr>
                   <td style="vertical-align:middle;">Ch0  Stable Matching</td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch0</a></td>
-                 <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch0-4</a></td>
+                  <td style="vertical-align:middle;"><a href="http://goo.gl/PBSpqU">Algorithm-Ch0</a></td>
+                 <td style="vertical-align:middle;"><a href="https://goo.gl/pTLAf5">Algorithm-Ch0-4</a></td>
                   <td style="vertical-align:middle;"></td>
                   <td style="vertical-align:middle;">2015/09/08</td>
                 </tr>
                 <tr>
                   <td style="vertical-align:middle;">Ch1  Preliminaries</td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch1</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch1-4</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch1-annotated</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/RTCHQk">Algorithm-Ch1</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/UrXtHs">Algorithm-Ch1-4</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/MA6fyU">Algorithm-Ch1-annotated</a></td>
                   <td style="vertical-align:middle;">2015/09/08</td>
                 </tr>
                 <tr>
@@ -620,7 +620,7 @@
               <tbody>
     <tr>
                       <td style="vertical-align:middle;">2010演算法期中考</td>
-                         <td style="vertical-align:middle;"><a href="goo.gl/nGwZ8q" class="pdf-mid">2010期中考</a></td>
+                         <td style="vertical-align:middle;"><a href="http://goo.gl/nGwZ8q" class="pdf-mid">2010期中考</a></td>
                          <td style="vertical-align:middle;">2015/9/9</td>
                     </tr>
 		<tr>
