--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
               <tbody>
                 <tr>
                   <td style="vertical-align:middle;">Syllabus</td>
-                  <td style="vertical-align:middle;"><a href="" class="pdf-title">Syllabus</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Syllabus-4</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/2QyrtH">Syllabus</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/LxuRD2">Syllabus-4</a></td>
                   <td style="vertical-align:middle;"></td>
                   <td style="vertical-align:middle;">2015/09/08</td>
                 </tr>
