--- a/index.html
+++ b/index.html
@@ -255,9 +255,9 @@
                 </tr>
                 <tr>
                   <td style="vertical-align:middle;">Ch2  Getting Started</td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch2</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch2-4</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch2-annotated</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/LbkUGH">Algorithm-Ch2</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/uQXKG6">Algorithm-Ch2-4</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/wsXLsA">Algorithm-Ch2-annotated</a></td>
                   <td style="vertical-align:middle;">2015/09/08</td>
                 </tr>
                 <tr>
