--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="">1051 演算法教學網頁</a>
+          <a class="navbar-brand" href="">1061 演算法教學網頁</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -234,108 +234,108 @@
               <tbody>
                 <tr>
                   <td style="vertical-align:middle;">Syllabus</td>
-                  <td style="vertical-align:middle;"><a href="https://goo.gl/2QyrtH">Syllabus</a></td>
-                  <td style="vertical-align:middle;"><a href="https://goo.gl/LxuRD2">Syllabus-4</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/2QyrtH" target="_blank">Syllabus</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/LxuRD2" target="_blank">Syllabus-4</a></td>
                   <td style="vertical-align:middle;"></td>
                   <td style="vertical-align:middle;">2017/09/15</td>
                 </tr>
                 <tr>
                   <td style="vertical-align:middle;">Ch0  Stable Matching</td>
-                  <td style="vertical-align:middle;"><a href="http://goo.gl/PBSpqU">Algorithm-Ch0</a></td>
-                 <td style="vertical-align:middle;"><a href="https://goo.gl/pTLAf5">Algorithm-Ch0-4</a></td>
+                  <td style="vertical-align:middle;"><a href="http://goo.gl/PBSpqU" target="_blank">Algorithm-Ch0</a></td>
+                 <td style="vertical-align:middle;"><a href="https://goo.gl/pTLAf5" target="_blank">Algorithm-Ch0-4</a></td>
                   <td style="vertical-align:middle;"></td>
                   <td style="vertical-align:middle;">2017/09/15</td>
                 </tr>
                 <tr>
                   <td style="vertical-align:middle;">Ch1  Preliminaries</td>
-                  <td style="vertical-align:middle;"><a href="https://goo.gl/RTCHQk">Algorithm-Ch1</a></td>
-                  <td style="vertical-align:middle;"><a href="https://goo.gl/UrXtHs">Algorithm-Ch1-4</a></td>
-                  <td style="vertical-align:middle;"><a href="https://goo.gl/MA6fyU">Algorithm-Ch1-annotated</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/RTCHQk" target="_blank">Algorithm-Ch1</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/UrXtHs" target="_blank">Algorithm-Ch1-4</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/MA6fyU" target="_blank">Algorithm-Ch1-annotated</a></td>
                   <td style="vertical-align:middle;">2017/09/15</td>
                 </tr>
                 <tr>
                   <td style="vertical-align:middle;">Ch2  Getting Started</td>
-                  <td style="vertical-align:middle;"><a href="https://goo.gl/LbkUGH">Algorithm-Ch2</a></td>
-                  <td style="vertical-align:middle;"><a href="https://goo.gl/uQXKG6">Algorithm-Ch2-4</a></td>
-                  <td style="vertical-align:middle;"><a href="https://goo.gl/wsXLsA">Algorithm-Ch2-annotated</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/LbkUGH" target="_blank">Algorithm-Ch2</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/uQXKG6" target="_blank">Algorithm-Ch2-4</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/wsXLsA" target="_blank">Algorithm-Ch2-annotated</a></td>
                   <td style="vertical-align:middle;">2017/09/15</td>
                 </tr>
                 <tr>
                   <td style="vertical-align:middle;">Ch3  Growth of Functions</td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch3</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch3-4</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch3-annotated</a></td>
-                  <td style="vertical-align:middle;">2015/09/08</td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/fmpD9p" target="_blank">Algorithm-Ch3</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/38qamw" target="_blank">Algorithm-Ch3-4</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/SqQ7Yv" target="_blank">Algorithm-Ch3-annotated</a></td>
+                  <td style="vertical-align:middle;">2017/09/15</td>
                 </tr>
                 <tr>
                   <td style="vertical-align:middle;">Ch4  Recurrences</td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch4</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch4-4</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch4-annotated</a></td>
-                  <td style="vertical-align:middle;">2015/09/08</td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/bzZPhN" target="_blank">Algorithm-Ch4</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/AUHiLX" target="_blank">Algorithm-Ch4-4</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/NKuosb" target="_blank">Algorithm-Ch4-annotated</a></td>
+                  <td style="vertical-align:middle;">2017/09/15</td>
                 </tr>
                 <tr>
                   <td style="vertical-align:middle;">Ch6 Heapsort</td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch6</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch6-4</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch6-annotated</a></td>
-                  <td style="vertical-align:middle;">2015/09/08</td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/rQPQJL" target="_blank">Algorithm-Ch6</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/2gBAQx" target="_blank">Algorithm-Ch6-4</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/r9Mzv9" target="_blank">Algorithm-Ch6-annotated</a></td>
+                  <td style="vertical-align:middle;">2017/09/15</td>
                 </tr>
                 <tr>
                   <td style="vertical-align:middle;">Ch7 Quicksort</td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch7</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch7-4</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch7-annotated</a></td>
-                  <td style="vertical-align:middle;">2015/09/08</td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/kLFCdD" target="_blank">Algorithm-Ch7</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/gpEkb6" target="_blank">Algorithm-Ch7-4</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/56d1a8" target="_blank">Algorithm-Ch7-annotated</a></td>
+                  <td style="vertical-align:middle;">2017/09/15</td>
                 </tr>
                 <tr>
                   <td style="vertical-align:middle;">Ch8 Sorting in Linear Time</td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch8</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch8-4</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch8-annotated</a></td>
-                  <td style="vertical-align:middle;">2015/09/08</td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/dsTsnS" target="_blank">Algorithm-Ch8</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/X2qvQJ" target="_blank">Algorithm-Ch8-4</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/R1anVm" target="_blank">Algorithm-Ch8-annotated</a></td>
+                  <td style="vertical-align:middle;">2017/09/15</td>
                 </tr>
 				<tr>
                   <td style="vertical-align:middle;">Ch9 Medians and Order Statistics</td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch9</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch9-4</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch9-annotated</a></td>
-                 <td style="vertical-align:middle;">2015/09/08</td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/Dfbrqh" target="_blank">Algorithm-Ch9</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/eK2FwG" target="_blank">Algorithm-Ch9-4</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/PEf8Ei" target="_blank">Algorithm-Ch9-annotated</a></td>
+                 <td style="vertical-align:middle;">2017/09/15</td>
                 </tr>
 				<tr>
                   <td style="vertical-align:middle;">Ch11 Hash Tables</td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch11</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch11-4</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch11-annotated</a></td>
-                  <td style="vertical-align:middle;">2015/09/08</td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/awdhAJ" target="_blank">Algorithm-Ch11</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/jPv7gK" target="_blank">Algorithm-Ch11-4</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/cFzzxw" target="_blank">Algorithm-Ch11-annotated</a></td>
+                  <td style="vertical-align:middle;">2017/09/15</td>
                 </tr>
 				<tr>
                   <td style="vertical-align:middle;">Ch12 Binary Search Trees</td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch12</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch12-4</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch12-annotated</a></td>
-                  <td style="vertical-align:middle;">2015/09/08</td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/CkL4zR" target="_blank">Algorithm-Ch12</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/ddxghA" target="_blank">Algorithm-Ch12-4</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/LXT7bv" target="_blank">Algorithm-Ch12-annotated</a></td>
+                  <td style="vertical-align:middle;">2017/09/15</td>
                 </tr>
 				<tr>
                   <td style="vertical-align:middle;">Ch13 Red Black Trees</td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch13</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch13-4</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch13-annotated</a></td>
-                  <td style="vertical-align:middle;">2015/09/08</td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/AS6hsq" target="_blank">Algorithm-Ch13</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/idbP9P" target="_blank">Algorithm-Ch13-4</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/cKto4U" target="_blank">Algorithm-Ch13-annotated</a></td>
+                  <td style="vertical-align:middle;">2017/09/15</td>
                 </tr>
 				<tr>
                   <td style="vertical-align:middle;">Ch15 Dynamic Programming</td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch15</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch15-4</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch15-annotated</a></td>
-                  <td style="vertical-align:middle;">2015/09/08</td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/mTJjQe" target="_blank">Algorithm-Ch15</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/uKhPAq" target="_blank">Algorithm-Ch15-4</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/B2hZys" target="_blank">Algorithm-Ch15-annotated</a></td>
+                  <td style="vertical-align:middle;">2017/09/15</td>
                 </tr>								
 				<tr>                  
 				  <td style="vertical-align:middle;">Ch16 Greedy Algorithms</td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch16</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch16-4</a></td>
-                  <td style="vertical-align:middle;"><a href="#" class="pdf-title">Algorithm-Ch16-annotated</a></td>
-                  <td style="vertical-align:middle;">2015/09/08</td>                
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/HqmMD5" target="_blank">Algorithm-Ch16</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/8FJHw7" target="_blank">Algorithm-Ch16-4</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/7Hbaic" target="_blank">Algorithm-Ch16-annotated</a></td>
+                  <td style="vertical-align:middle;">2017/09/08</td>                
 				</tr>
 
 				<!------動畫------>
