--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 				<tr>
 					<td style="vertical-align:middle;">15</td>
 					<td style="vertical-align:middle;"><a href="#" class="pdf-HW">Homework12</a></td>
-					<td style="vertical-align:middle;"><a href="https://goo.gl/0kfXu3"">Ans12</a></td>
+					<td style="vertical-align:middle;"><a href="https://goo.gl/0kfXu3">Ans12</a></td>
 					<td style="vertical-align:middle;">2015/09/10</td>
 				</tr>
 				<tr>
@@ -620,29 +620,34 @@
               <tbody>
     <tr>
                       <td style="vertical-align:middle;">2010演算法期中考</td>
-                         <td style="vertical-align:middle;"><a href="http://goo.gl/nGwZ8q" class="pdf-mid">2010期中考</a></td>
-                         <td style="vertical-align:middle;">2015/9/9</td>
+                         <td style="vertical-align:middle;"><a href="https://goo.gl/BYZRhj" target="_blank">2010期中考</a></td>
+                         <td style="vertical-align:middle;">2017/9/15</td>
+                    </tr>
+    <tr>
+                      <td style="vertical-align:middle;">2010演算法期末考</td>
+                         <td style="vertical-align:middle;"><a href="https://goo.gl/z8ceRK" target="_blank">2010期末考</a></td>
+                         <td style="vertical-align:middle;">2017/9/15</td>
                     </tr>
 		<tr>
    	             <td style="vertical-align:middle;">2011演算法期中考</td>
-                     <td style="vertical-align:middle;"><a href="#" class="pdf-mid">2011期中考</a></td>
-                     <td style="vertical-align:middle;">2015/9/9</td>
+                     <td style="vertical-align:middle;"><a href="https://goo.gl/ogdQJ1" target="_blank">2011期中考</a></td>
+                     <td style="vertical-align:middle;">2017/9/15</td>
                 </tr>
 		<tr>
                      <td style="vertical-align:middle;">2011演算法期末考</td>
-                     <td style="vertical-align:middle;"><a href="#" class="pdf-final">2011期末考</a></td>
-                     <td style="vertical-align:middle;">2015/9/9</td>
+                     <td style="vertical-align:middle;"><a href="https://goo.gl/3e3At9" target="_blank">2011期末考</a></td>
+                     <td style="vertical-align:middle;">2017/9/15</td>
                 </tr>
 		<tr>
                    <td style="vertical-align:middle;">2012演算法期中考</td>
-                   <td style="vertical-align:middle;"><a href="#" class="pdf-mid">2012期中考</a></td>
-                   <td style="vertical-align:middle;">2015/9/9</td>
+                   <td style="vertical-align:middle;"><a href="https://goo.gl/B91V6g" target="_blank">2012期中考</a></td>
+                   <td style="vertical-align:middle;">2017/9/15</td>
                 </tr>
-		 <tr>
-                   <td style="vertical-align:middle;">2012演算法期末考</td>
-                   <td style="vertical-align:middle;"><a href="#" class="pdf-final">2012期末考</a></td>
-                   <td style="vertical-align:middle;">2015/9/9</td>
-                </tr>
+    <tr>
+                  <td style="vertical-align:middle;">2012演算法期末考</td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/TcpRg6" target="_blank">2012期末考</a></td>
+                  <td style="vertical-align:middle;">2017/9/15</td>
+             </tr>
 		<tr>
                    <td style="vertical-align:middle;">2013演算法期中考</td>
                    <td style="vertical-align:middle;"><a href="#" class="pdf-mid">2013期中考</a></td>
