--- a/index.html
+++ b/index.html
@@ -650,14 +650,19 @@
              </tr>
 		<tr>
                    <td style="vertical-align:middle;">2013演算法期中考</td>
-                   <td style="vertical-align:middle;"><a href="#" class="pdf-mid">2013期中考</a></td>
-                   <td style="vertical-align:middle;">2015/9/9</td>
+                   <td style="vertical-align:middle;"><a href="https://goo.gl/KgM5Ah" target="_blank">2013期中考</a></td>
+                   <td style="vertical-align:middle;">2017/9/16</td>
                 </tr>
 		<tr>
                    <td style="vertical-align:middle;">2013演算法期末考</td>
-                   <td style="vertical-align:middle;"><a href="#" class="pdf-final">2013期末考</a></td>
-                   <td style="vertical-align:middle;">2015/10/27</td>
+                   <td style="vertical-align:middle;"><a href="https://goo.gl/VBieXX" target="_blank">2013期末考</a></td>
+                   <td style="vertical-align:middle;">2017/9/16</td>
                 </tr>
+    <tr>
+                  <td style="vertical-align:middle;">2013演算法期末考</td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/VBieXX" target="_blank">2013期末考</a></td>
+                  <td style="vertical-align:middle;">2017/9/16</td>
+               </tr>
 	    </tbody>
            </table>
           </div>
