--- a/index.html
+++ b/index.html
@@ -574,12 +574,12 @@
 		
 		
 		<!--其餘頁面GoogleTable顯示部份設定-->
-			<div id="table-responsive-05" style="display:none;">
-				<iframe width="100%" height="800" src="https://docs.google.com/spreadsheets/d/1n6ZsfqLDKJ6I20rC35CaGjuno9idj42sKperWHgrQm0/pubhtml?gid=108413028&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+			<div id="table-responsive-05" style="display:none;"><!--發問紀錄-->
+				<iframe width="100%" height="800" src="https://goo.gl/NuFNSh"></iframe>
 			</div>
-			<div id="table-responsive-06" style="display:none;">
+			<!--<div id="table-responsive-06" style="display:none;">
 				<iframe width="100%" height="800" src="https://docs.google.com/spreadsheets/d/1n6ZsfqLDKJ6I20rC35CaGjuno9idj42sKperWHgrQm0/pubhtml?gid=975063900&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-			</div>
+			</div>-->
 			<div id="table-responsive-07" style="display:none;">
 				<iframe width="100%" height="800" src="https://docs.google.com/spreadsheets/d/1n6ZsfqLDKJ6I20rC35CaGjuno9idj42sKperWHgrQm0/pubhtml?gid=863501115&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 			</div>
