--- a/index.html
+++ b/index.html
@@ -580,33 +580,33 @@
 			<!--<div id="table-responsive-06" style="display:none;">
 				<iframe width="100%" height="800" src="https://docs.google.com/spreadsheets/d/1n6ZsfqLDKJ6I20rC35CaGjuno9idj42sKperWHgrQm0/pubhtml?gid=975063900&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 			</div>-->
-			<div id="table-responsive-07" style="display:none;">
+			<div id="table-responsive-07" style="display:none;"><!--補強-->
 				<iframe width="100%" height="800" src="https://docs.google.com/spreadsheets/d/1n6ZsfqLDKJ6I20rC35CaGjuno9idj42sKperWHgrQm0/pubhtml?gid=863501115&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 			</div>
-			<div id="table-responsive-08" style="display:none;">
+			<!--<div id="table-responsive-08" style="display:none;">
 				<iframe width="100%" height="800" src="https://docs.google.com/spreadsheets/d/1n6ZsfqLDKJ6I20rC35CaGjuno9idj42sKperWHgrQm0/pubhtml?gid=1605268540&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-			</div>
-			<div id="table-responsive-09" style="display:none;">
+			</div>-->
+			<div id="table-responsive-09" style="display:none;"><!--小考成績查詢-->
 				<iframe width="100%" height="800" src="https://docs.google.com/spreadsheets/d/1n6ZsfqLDKJ6I20rC35CaGjuno9idj42sKperWHgrQm0/pubhtml?gid=668956435&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 			</div>
-			<div id="table-responsive-10" style="display:none;">
+			<!--<div id="table-responsive-10" style="display:none;">
 				<iframe width="100%" height="800" src="https://docs.google.com/spreadsheets/d/1n6ZsfqLDKJ6I20rC35CaGjuno9idj42sKperWHgrQm0/pubhtml?gid=140348773&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-			</div>			
-			<div id="table-responsive-12" style="display:none;">
+			</div>-->			
+			<div id="table-responsive-12" style="display:none;"><!--程式練習狀況-->
 			<iframe width="100%" height="800" src="https://docs.google.com/spreadsheets/d/1n6ZsfqLDKJ6I20rC35CaGjuno9idj42sKperWHgrQm0/pubhtml?gid=1402978687&amp;single=true&amp;widget=true&amp;headers=false"></iframe>				
 			</div>
         
-			<div id="table-responsive-13" style="display:none;">
+			<!--<div id="table-responsive-13" style="display:none;">
 			<iframe width="100%" height="800" src="https://docs.google.com/spreadsheets/d/1n6ZsfqLDKJ6I20rC35CaGjuno9idj42sKperWHgrQm0/pubhtml?gid=1415003753&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+			</div>-->
+			
+			<div id="table-responsive-14" style="display:none;"><!--總成績-->
+			<iframe width="100%" height="800" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSZiswNYdtHKD29xIU427nTYlf159kpkB-jB5PVtK5DdvIJ0FjsXgNYduhsl0X6GR0UHDzI1MiyI3Ao/pubhtml?widget=true&amp;headers=false"></iframe>
 			</div>
 			
-			<div id="table-responsive-14" style="display:none;">
-			<iframe width="100%" height="800" src="https://docs.google.com/spreadsheets/d/1n6ZsfqLDKJ6I20rC35CaGjuno9idj42sKperWHgrQm0/pubhtml?gid=1749465652&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-			</div>
-			
-			<div id="table-responsive-15" style="display:none;">
+			<!--<div id="table-responsive-15" style="display:none;">
 			<iframe width="100%" height="800" src="https://docs.google.com/spreadsheets/d/1n6ZsfqLDKJ6I20rC35CaGjuno9idj42sKperWHgrQm0/pubhtml?gid=809113875&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-			</div>
+			</div>-->
            <table class="table table-striped" id="table-responsive-11" style="display:none;">
               <thead>  
                        <tr>  
