--- a/index.html
+++ b/index.html
@@ -216,6 +216,11 @@
 				    <td style="text-align:left;vertical-align:middle"><span class="label label-danger">new</span></td>
 				    <td class="bulletin-date">2017/9/15</td>
 				    <td style="text-align:center;vertical-align:middle;">WEB TEST</td>
+          </tr>
+          <tr>    
+				    <td style="text-align:left;vertical-align:middle"><span class="label label-danger">Important</span></td>
+				    <td class="bulletin-date">2017/9/21</td>
+				    <td style="text-align:center;vertical-align:middle;">請有修演算法週三早上的同學(有訂講義者)於下週9/27周三上課時帶110元向助教領取講義</td>
 			    </tr>
               </tbody>
             </table>
