--- a/index.html
+++ b/index.html
@@ -179,16 +179,16 @@
             <li style="text-align:center;"; id="sidebar-li-02"><a href="#">上課講義</a></li>
             <li style="text-align:center;"; id="sidebar-li-03"><a href="#">作業下載</a></li>
             <li style="text-align:center;"; id="sidebar-li-04"><a href="#">考試題目</a></li>
-			<li style="text-align:center;"; id="sidebar-li-05"><a href="#">發問紀錄</a></li>
-			<!--<li style="text-align:center;"; id="sidebar-li-06"><a href="#">發問紀錄B</a></li>-->
-			<li style="text-align:center;"; id="sidebar-li-07"><a href="#">補強紀錄</a></li>
-			<!--<li style="text-align:center;"; id="sidebar-li-08"><a href="#">補強紀錄B</a></li>-->
-            <li style="text-align:center;"; id="sidebar-li-09"><a href="#">成績查詢</a></li>
-            <!--<li style="text-align:center;"; id="sidebar-li-10"><a href="#">成績查詢B</a></li>-->
+			<li style="text-align:center;"; id="sidebar-li-05"><a href="#">發問紀錄(電機系)</a></li>
+			<li style="text-align:center;"; id="sidebar-li-06"><a href="#">發問紀錄(資工系)</a></li>
+			<li style="text-align:center;"; id="sidebar-li-07"><a href="#">補強紀錄(電機系)</a></li>
+			<li style="text-align:center;"; id="sidebar-li-08"><a href="#">補強紀錄(資工系)</a></li>
+      <li style="text-align:center;"; id="sidebar-li-09"><a href="#">成績查詢(電機系)</a></li>
+      <li style="text-align:center;"; id="sidebar-li-10"><a href="#">成績查詢(資工系)</a></li>
             <li style="text-align:center;"; id="sidebar-li-12"><a href="#">程式練習</a></li>
             <!--<li style="text-align:center;"; id="sidebar-li-13"><a href="#">程式練習B</a></li>-->
-			<li style="text-align:center;"; id="sidebar-li-14"><a href="#">期末總成績</a></li>
-			<!--<li style="text-align:center;"; id="sidebar-li-15"><a href="#">期末總成績B</a></li>-->
+			<li style="text-align:center;"; id="sidebar-li-14"><a href="#">期末總成績(電機系)</a></li>
+			<li style="text-align:center;"; id="sidebar-li-15"><a href="#">期末總成績(資工系)</a></li>
  
             <li style="text-align:center;" id="sidebar-li-11"><a href="#">歷屆考題</a></li>
           </ul>
@@ -583,9 +583,9 @@
 			<div id="table-responsive-05" style="display:none;"><!--發問紀錄-->
 				<iframe width="100%" height="800"  src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTDBhlvd_Id2h-GUQWLZbhDNqSp6BSMvISB48h6kc8nAV5k5qsXaRprnxOJiBvKe9iFjW6Fbw53ha4r/pubhtml?widget=true&amp;headers=false"></iframe>
 			</div>
-			<!--<div id="table-responsive-06" style="display:none;">
-				<iframe width="100%" height="800" src="https://docs.google.com/spreadsheets/d/1n6ZsfqLDKJ6I20rC35CaGjuno9idj42sKperWHgrQm0/pubhtml?gid=975063900&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-			</div>-->
+			<div id="table-responsive-06" style="display:none;">
+				<iframe width="100%" height="800" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQslld3Mx63WQXUkXmk4O5zg55kI5pqxhcWg95vUbmSmdhR25DQRup2gbe6HvDkiKFzN6rzksRVWhag/pubhtml?widget=true&amp;headers=false"></iframe>
+			</div>
 			<div id="table-responsive-07" style="display:none;"><!--補強-->
 				<iframe width="100%" height="800" src="https://docs.google.com/spreadsheets/d/1n6ZsfqLDKJ6I20rC35CaGjuno9idj42sKperWHgrQm0/pubhtml?gid=863501115&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 			</div>
@@ -610,9 +610,9 @@
 			<iframe width="100%" height="800" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSZiswNYdtHKD29xIU427nTYlf159kpkB-jB5PVtK5DdvIJ0FjsXgNYduhsl0X6GR0UHDzI1MiyI3Ao/pubhtml?widget=true&amp;headers=false"></iframe>
 			</div>
 			
-			<!--<div id="table-responsive-15" style="display:none;">
-			<iframe width="100%" height="800" src="https://docs.google.com/spreadsheets/d/1n6ZsfqLDKJ6I20rC35CaGjuno9idj42sKperWHgrQm0/pubhtml?gid=809113875&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-			</div>-->
+			<div id="table-responsive-15" style="display:none;">
+			<iframe width="100%" height="800"  src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQrZBVuSdR1nqh1iaAc1B_4h1n8mjbAXApbEd9Qphov7akwLnr4tezoEpHPwgbOw9xch_PXTwX475ta/pubhtml?widget=true&amp;headers=false"></iframe>
+			</div>
            <table class="table table-striped" id="table-responsive-11" style="display:none;">
               <thead>  
                        <tr>  
