--- a/index.html
+++ b/index.html
@@ -212,16 +212,23 @@
                 </tr>
               </thead>
               <tbody>
-               <tr>    
+                <tr>    
+                      <td style="text-align:left;vertical-align:middle"><span class="label label-danger">New</span></td>
+                      <td class="bulletin-date">2017/9/23</td>
+                      <td style="text-align:center;vertical-align:middle;">助教時間: 每個禮拜二 下午5~6(9/26 助教時間為4~5點) 地點:在lab601 </td>
+                </tr>
+
+                <tr>    
                   <td style="text-align:left;vertical-align:middle"><span class="label label-danger">Important</span></td>
                   <td class="bulletin-date">2017/9/21</td>
                   <td style="text-align:center;vertical-align:middle;">請有修演算法週三早上的同學(有訂講義者)於下週9/27周三上課時帶110元向助教領取講義</td>
-              </tr>
-			         <tr>    
+                </tr>
+
+			          <tr>    
 				          <td style="text-align:left;vertical-align:middle"><span class="label label-danger"></span></td>
 				          <td class="bulletin-date">2017/9/15</td>
 				          <td style="text-align:center;vertical-align:middle;">WEB TEST</td>
-              </tr>
+                </tr>
 
               </tbody>
             </table>
