--- a/index.html
+++ b/index.html
@@ -212,6 +212,11 @@
                 </tr>
               </thead>
               <tbody>
+                  <tr>    
+                      <td style="text-align:left;vertical-align:middle"><span class="label label-danger">New</span></td>
+                      <td class="bulletin-date">2017/9/23</td>
+                      <td style="text-align:center;vertical-align:middle;">助教地點:INS205 </td>
+                </tr>
                 <tr>    
                       <td style="text-align:left;vertical-align:middle"><span class="label label-danger">New</span></td>
                       <td class="bulletin-date">2017/9/23</td>
