--- a/index.html
+++ b/index.html
@@ -468,6 +468,11 @@
 			<thead>                <tr>                  <!-- <th class="title-font">週次</th> -->                  <th class="title-font">名稱</th>                  <th class="title-font">解答</th>                  <th class="title-font">上傳日期</th>                </tr>              </thead>              
 			
 			<tbody>
+          <tr>
+              <td style="vertical-align:middle;">Quiz_1(電機)</td>
+              <td style="vertical-align:middle;"><a href="https://goo.gl/kBUUeK">Quiz_1(電機)</a></td>
+              <td style="vertical-align:middle;">2017/09/25</td>			
+          </tr>
 				<tr>
 						<td style="vertical-align:middle;">Quiz_2_InsertSort_MergeSort</td>
 						<td style="vertical-align:middle;"><a href="https://goo.gl/E9CjpX">Quiz2_solution</a></td>
