--- a/index.html
+++ b/index.html
@@ -604,11 +604,11 @@
 				<iframe width="100%" height="800" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQslld3Mx63WQXUkXmk4O5zg55kI5pqxhcWg95vUbmSmdhR25DQRup2gbe6HvDkiKFzN6rzksRVWhag/pubhtml?widget=true&amp;headers=false"></iframe>
 			</div>
 			<div id="table-responsive-07" style="display:none;"><!--補強-->
-				<iframe width="100%" height="800" src="https://docs.google.com/spreadsheets/d/1n6ZsfqLDKJ6I20rC35CaGjuno9idj42sKperWHgrQm0/pubhtml?gid=863501115&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+				<iframe width="100%" height="800" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSrwabDhZjahxcKfaU-TgoZ76dyBUdoOWALwyYDGCJjo6ztpreLOD2B7rSg3Cr9Y2g6qhhi-bqy094i/pubhtml?widget=true&amp;headers=false"></iframe>
 			</div>
-			<!--<div id="table-responsive-08" style="display:none;">
-				<iframe width="100%" height="800" src="https://docs.google.com/spreadsheets/d/1n6ZsfqLDKJ6I20rC35CaGjuno9idj42sKperWHgrQm0/pubhtml?gid=1605268540&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-			</div>-->
+			<div id="table-responsive-08" style="display:none;">
+				<iframe width="100%" height="800" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT5C_Ul3EmC6LMLYdpoNWcvGUacIdNbAYEilmwXPnPyV3P2N6AZTCFwaNr7Vg3_b9S1VKTHd2ycFDOo/pubhtml?widget=true&amp;headers=false"></iframe>
+			</div>
 			<div id="table-responsive-09" style="display:none;"><!--小考成績查詢-->
 				<iframe width="100%" height="800" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTRoTHJZnFXByoUA0Y174HL-kKhdM9kKoz6S0eTZJOoGGTumXchPtK7d1tOmFxqFeaIgR75JuR-NGRs/pubhtml?widget=true&amp;headers=false"></iframe>
 			</div>
