--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
 				
 				<tr>
 						<td style="vertical-align:middle;">Quiz_4_RecursionTree_SubstituteMethod</td>
-						<td style="vertical-align:middle;"><a href="https://goo.gl/cLK6pV">Quiz4_solution</a></td>
+						<td style="vertical-align:middle;"><a href="https://drive.google.com/open?id=0BxJp5QcLMI49TGdVQlNjVFRsT00">Quiz4_solution</a></td>
 						<td style="vertical-align:middle;">2016/10/22</td>			
 				</tr>
 				
