--- a/index.html
+++ b/index.html
@@ -469,26 +469,26 @@
 			
 			<tbody>
           <tr>
-              <td style="vertical-align:middle;">Quiz_1(電機)</td>
-              <td style="vertical-align:middle;"><a href="https://goo.gl/kBUUeK">Quiz1_solution</a></td>
+              <td style="vertical-align:middle;">Quiz_1</td>
+              <td style="vertical-align:middle;"><a href="https://drive.google.com/open?id=0BxJp5QcLMI49OXBlM0p3YUNTUnM">Quiz1_solution</a></td>
               <td style="vertical-align:middle;">2017/09/25</td>			
           </tr>
 				<tr>
-						<td style="vertical-align:middle;">Quiz_2(資工)</td>
-						<td style="vertical-align:middle;"><a href="https://goo.gl/kBUUeK">Quiz2_solution</a></td>
+						<td style="vertical-align:middle;">Quiz_2</td>
+						<td style="vertical-align:middle;"><a href="https://drive.google.com/open?id=0BxJp5QcLMI49dFJZSnNtc1RGTVk">Quiz2_solution</a></td>
 						<td style="vertical-align:middle;">2017/10/02</td>			
 				</tr>
 		
 				<tr>
-						<td style="vertical-align:middle;">Quiz_3(資工)</td>
-						<td style="vertical-align:middle;"><a href="https://goo.gl/kBUUeK">Quiz3_solution</a></td>
+						<td style="vertical-align:middle;">Quiz_3</td>
+						<td style="vertical-align:middle;"><a href="https://drive.google.com/open?id=0BxJp5QcLMI49MkVETng2eWZBWGc">Quiz3_solution</a></td>
 						<td style="vertical-align:middle;">2017/10/09</td>			
 				</tr>
 				
 				<tr>
-						<td style="vertical-align:middle;">Quiz_4_RecursionTree_SubstituteMethod</td>
+						<td style="vertical-align:middle;">Quiz_5</td>
 						<td style="vertical-align:middle;"><a href="https://drive.google.com/open?id=0BxJp5QcLMI49TGdVQlNjVFRsT00">Quiz4_solution</a></td>
-						<td style="vertical-align:middle;">2016/10/22</td>			
+						<td style="vertical-align:middle;">2017/10/21</td>			
 				</tr>
 				
 				<tr>
