--- a/index.html
+++ b/index.html
@@ -494,7 +494,11 @@
 						<td style="vertical-align:middle;"><a href="https://drive.google.com/open?id=0BxJp5QcLMI49TGdVQlNjVFRsT00">Quiz5_solution</a></td>
 						<td style="vertical-align:middle;">2017/10/21</td>			
 				</tr>
-				
+        <tr>
+          <td style="vertical-align:middle;">Quiz_5(電機)</td>
+          <td style="vertical-align:middle;"><a href=" https://drive.google.com/open?id=0BxJp5QcLMI49YTA3RkJLRTRPSFE">Quiz5_solution</a></td>
+          <td style="vertical-align:middle;">2017/10/26</td>			
+      </tr>
 			<!--	<tr>
 						<td style="vertical-align:middle;">Quiz5_FindMaxSubarray_MasterMethod</td>
 						<td style="vertical-align:middle;"><a href="https://goo.gl/7p0sMK">Quiz5_solution</a></td>
