--- a/index.html
+++ b/index.html
@@ -215,8 +215,7 @@
                   <tr>    
                       <td style="text-align:left;vertical-align:middle"><span class="label label-danger">New</span></td>
                       <td class="bulletin-date">2017/11/1</td>
-                      <td style="text-align:center;vertical-align:middle;">期中考公告</td>
-                      <td style="text-align:center;vertical-align:left;">期中考時間:11/7(二)晚上 6:00~9:00 地點:B03、B10、B12 期中考範圍:第 0 章 ~ 第 8 章 counting sort</td>
+                      <td style="text-align:center;vertical-align:middle;">期中考公告 時間:11/7(二)晚上 6:00~9:00 地點:B03、B10、B12 期中考範圍:第 0 章 ~ 第 8 章 counting sort</td>
                 </tr>
                   <tr>    
                       <td style="text-align:left;vertical-align:middle"><span class="label label-danger">New</span></td>
