--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
           <td style="vertical-align:middle;">2017/10/26</td>			
       </tr>
       <tr>
-        <td style="vertical-align:middle;">Quiz_5(資工7)</td>
+        <td style="vertical-align:middle;">Quiz_7(資工)</td>
         <td style="vertical-align:middle;"><a href="https://drive.google.com/open?id=0BxJp5QcLMI49VEJaVTdDcVRXazA">Quiz5_solution</a></td>
         <td style="vertical-align:middle;">2017/11/06</td>			
     </tr>
