--- a/index.html
+++ b/index.html
@@ -213,23 +213,28 @@
               </thead>
               <tbody>
                   <tr>    
-                      <td style="text-align:left;vertical-align:middle"><span class="label label-danger">New</span></td>
+                      <td style="text-align:left;vertical-align:middle"><span class="label label-danger">Important</span></td>
+                      <td class="bulletin-date">2017/11/8</td>
+                      <td style="text-align:center;vertical-align:middle;"><a href="https://drive.google.com/file/d/1A5-E3uA0F6HgVvxQd5jZ62_lgmw5k6gY/view?usp=sharing" target="_blank">資工系期中成績總表連結</a></td>
+                </tr>
+                  <tr>    
+                      <td style="text-align:left;vertical-align:middle"><span class="label label-danger"></span></td>
                       <td class="bulletin-date">2017/11/1</td>
                       <td style="text-align:center;vertical-align:middle;">期中考公告 時間:11/7(二)晚上 6:00~9:00 地點:B03、B10、B12 期中考範圍:第 0 章 ~ 第 8 章 counting sort</td>
                 </tr>
                   <tr>    
-                      <td style="text-align:left;vertical-align:middle"><span class="label label-danger">New</span></td>
+                      <td style="text-align:left;vertical-align:middle"><span class="label label-danger"></span></td>
                       <td class="bulletin-date">2017/9/23</td>
                       <td style="text-align:center;vertical-align:middle;">助教地點:INS205 </td>
                 </tr>
                 <tr>    
-                      <td style="text-align:left;vertical-align:middle"><span class="label label-danger">New</span></td>
+                      <td style="text-align:left;vertical-align:middle"><span class="label label-danger"></span></td>
                       <td class="bulletin-date">2017/9/23</td>
                       <td style="text-align:center;vertical-align:middle;">助教時間: 每個禮拜二 下午5~6(9/26 助教時間為4~5點) 地點:在lab601 </td>
                 </tr>
 
                 <tr>    
-                  <td style="text-align:left;vertical-align:middle"><span class="label label-danger">Important</span></td>
+                  <td style="text-align:left;vertical-align:middle"><span class="label label-danger"></span></td>
                   <td class="bulletin-date">2017/9/21</td>
                   <td style="text-align:center;vertical-align:middle;">請有修演算法週三早上的同學(有訂講義者)於下週9/27周三上課時帶110元向助教領取講義</td>
                 </tr>
